k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: backend
          image: 144618662969.dkr.ecr.us-east-1.amazonaws.com/aws-devsecops-appsec-v1-backend:latest
          ports:
            - containerPort: 8080
